use the new provider replacer
it increments the versions of updated
processes